[gd_scene load_steps=4 format=3 uid="uid://cm6iedjedbhnr"]

[ext_resource type="Script" path="res://script/player/base_player.gd" id="1_ih2yr"]
[ext_resource type="PackedScene" uid="uid://bbinpg7puli3u" path="res://scene/buff/buff_manager.tscn" id="2_cbof4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_upadm"]

[node name="BasePlayer" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 16
motion_mode = 1
script = ExtResource("1_ih2yr")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.8, 0.8)
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite")

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource("CircleShape2D_upadm")

[node name="Hurtbox" type="Area2D" parent="." groups=["player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]

[node name="Timer" type="Timer" parent="."]

[node name="BuffManager" parent="." instance=ExtResource("2_cbof4")]

[connection signal="area_entered" from="PickupArea" to="." method="_on_pickup_area_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
